@@ -15,11 +15,13 @@ IF DEFINED USER (
 )
 
 
-IF NOT DEFINED RDECK_BASE (
-   ECHO RDECK_BASE not set
-   GOTO:EOF
-)
-
+rem Guess RDECK_BASE if not defined
+set "CURRENT_DIR=%cd%"
+if not "%RDECK_BASE%" == "" goto gotRdeckBase
+set "RDECK_BASE=%CURRENT_DIR%"
+if exist "%RDECK_BASE%\etc\profile.bat" goto gotRdeckBase
+set "RDECK_BASE="
+:gotRdeckBase
 
 IF NOT EXIST "%RDECK_BASE%\etc\profile.bat" (
    ECHO Unable to source %RDECK_BASE%\etc\profile.bat
@@ -28,8 +30,9 @@ IF NOT EXIST "%RDECK_BASE%\etc\profile.bat" (
 	CALL "%RDECK_BASE%\etc\profile.bat"
 )
 
-IF NOT DEFINED ANT_HOME (
-	SET ANT_HOME=%RDECK_BASE%\pkgs\apache-ant-1.8.1
+IF NOT DEFINED RDECK_BASE (
+   ECHO RDECK_BASE not set
+   GOTO:EOF
 )
 
 IF "%JAVA_HOME%" =="" (
@@ -44,12 +47,13 @@ IF NOT EXIST "%JAVA_HOME%\bin\java.exe" (
 
 set Path=%JAVA_HOME%\bin:%ANT_HOME%\bin:%Path%
 
-CALL %JAVA_HOME%\bin\java "-Dant.home=%ANT_HOME%" ^
-                          "-Drdeck.base=%RDECK_BASE%" ^
-                          "-Duser.name=%USER_NAME%" ^
-                           %RDECK_SSL_OPTS% ^
-                          -cp "%RDECK_BASE%\classes;%ANT_HOME%\lib\xerces-2.6.0.jar;%ANT_HOME%\lib\xml-apis.jar" ^
-                          com.dtolabs.rundeck.core.cli.project.ProjectTool %*
+CALL "%JAVA_HOME%\bin\java" ^
+    "-Drdeck.base=%RDECK_BASE%" ^
+    %RDECK_CLI_OPTS% ^
+    "-Duser.name=%USER_NAME%" ^
+    %RDECK_SSL_OPTS% ^
+    -Djava.ext.dirs=%RD_LIBDIR% ^
+    com.dtolabs.rundeck.core.cli.project.ProjectTool %*
 
 IF NOT "%ERRORLEVEL%"=="0" GOTO:EXITSetup
 
